# parcelwing-python

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: send_email.py  send_template_email.py
src/parcelwing/: __init__.py  _http.py  client.py  errors.py  types.py
src/parcelwing/resources/: __init__.py  automations.py  contacts.py  emails.py  segments.py  topics.py
tests/: test_client.py
