[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "parcelwing"
version = "0.1.0"
description = "Official Python SDK for the Parcel Wing API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Parcel Wing" }]
keywords = ["parcel-wing", "email", "transactional-email", "marketing-email", "sdk", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://parcelwing.com"
Repository = "https://github.com/parcelwing/parcelwing-python"
Issues = "https://github.com/parcelwing/parcelwing-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parcelwing"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["parcelwing"]
